desc de ingredientes añadida

--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -68,50 +68,50 @@
     <div class="gallary row">
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/pepperoni.jpg' %}" alt="Ingrediente 1" class="gallary-img">
-            <a href="#" class="gallary-overlay">
+            <a href="{% url 'ingrediente_desc' 'Pepperoni' %}" class="gallary-overlay">
                 <span class="h3 white">Pepperoni</span>
             </a>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/guanciale.jpg' %}" alt="Ingrediente 2" class="gallary-img">
-            <a href="#" class="gallary-overlay">
+            <a href="{% url 'ingrediente_desc' 'Guanciale' %}" class="gallary-overlay">
                 <span class="h3 white">Guanciale</span>
             </a>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/pesto.jpg' %}" alt="Ingrediente 3" class="gallary-img">
-            <a href="#" class="gallary-overlay">
+            <a href="{% url 'ingrediente_desc' 'Pesto' %}" class="gallary-overlay">
                 <span class="h3 white">Pesto</span>
             </a>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/trufas.jpg' %}" alt="Ingrediente 4" class="gallary-img">
-            <a href="#" class="gallary-overlay">
+            <a href="{% url 'ingrediente_desc' 'Trufas' %}" class="gallary-overlay">
                 <span class="h3 white">Trufas</span>
             </a>
         </div>
         <div class="gallary row">
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/parmigiano.jpg' %}" alt="Ingrediente 1" class="gallary-img">
-            <a href="#" class="gallary-overlay">
+            <a href="{% url 'ingrediente_desc' 'Parmigiano Reggiano' %}" class="gallary-overlay">
                 <span class="h3 white">Parmigiano Reggiano</span>
             </a>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/mozzarella.jpg' %}" alt="Ingrediente 2" class="gallary-img">
-            <a href="#" class="gallary-overlay">
+            <a href="{% url 'ingrediente_desc' 'Mozzarella' %}" class="gallary-overlay">
                 <span class="h3 white">Mozzarella</span>
             </a>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/setas.jpg' %}" alt="Ingrediente 3" class="gallary-img">
-            <a href="#" class="gallary-overlay">
+            <a href="{% url 'ingrediente_desc' 'Setas' %}" class="gallary-overlay">
                 <span class="h3 white">Setas</span>
             </a>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/aceitunas.jpg' %}" alt="Ingrediente 4" class="gallary-img">
-            <a href="#" class="gallary-overlay">
+            <a href="{% url 'ingrediente_desc' 'Aceitunas' %}" class="gallary-overlay">
                 <span class="h3 white">Aceitunas</span>
             </a>
         </div>
