--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -62,7 +62,7 @@
                         <a class="nav-link" href="#contact">Contactanos</a>
                     </li>
                     <li class="nav-item">
-                        <a href="components.html" class="btn btn-primary ml-xl-4">Components</a>
+                        <a href="/components.html" class="btn btn-primary ml-xl-4">Components</a>
                     </li>
                 </ul>
             </div>
