--- a/appMammaMia/templates/pizzas.html
+++ b/appMammaMia/templates/pizzas.html
@@ -8,7 +8,7 @@
 {% block title%} Pizzas masa {{masa.nombre}} {%endblock%}
 
 {% block content %}
-<h1 class="titulo-de-masa">Pizzas con masa: {{ masa.nombre }}</h1><br>
+<h1 class="titulo-de-masa">Pizzas con masa {{ masa.nombre }}</h1><br>
 <div class="container">
     <div class="row">
         {% if pizzas %}
@@ -29,7 +29,7 @@
                             <p><strong>Ingredientes:</strong></p>
                             <ul>
                                 {% for ingrediente in pizza.ingredientes.all %}
-                                    <li>{{ ingrediente.nombre }}</li>
+                                    <li><a href="{% url 'ingrediente_desc' ingrediente.nombre %}">{{ ingrediente.nombre }}</a></li>
                                 {% endfor %}
                             </ul>
                         </div>
