un poco de todo ya ni se

--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -38,10 +38,10 @@
                         <a class="nav-link" href="/#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#about">Acerca de nosotros</a>
+                        <a class="nav-link" href="/#gallary">Nuestra selección</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#gallary">Nuestra selección</a>
+                        <a class="nav-link" href="/#ingredients">Nuestros Ingredientes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/#book-table">Reservar mesa</a>
@@ -62,7 +62,7 @@
                         <a class="nav-link" href="#contact">Contactanos</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/components.html" class="btn btn-primary ml-xl-4">Components</a>
+                        <a href="/admin" class="btn btn-primary ml-xl-4">Admin Panel</a> <!--QUITAR SEGURAMENTE-->
                     </li>
                 </ul>
             </div>
