--- a/appMammaMia/templates/ingrediente.html
+++ b/appMammaMia/templates/ingrediente.html
@@ -46,7 +46,7 @@
 
                     <div class="pizza-info">
                         <h4>{{ pizza.nombre }}</h4>
-                        <a href="{% url 'pizzas' pizza.masa %}">Más información</a>  <!-- CAMBIAR ESTE ENLACE A SU DESC Y NO A SU MASA -->
+                        <a href="{% url 'pizza_desc' pizza.nombre %}">Más información</a>  <!-- CAMBIAR ESTE ENLACE A SU DESC Y NO A SU MASA -->
                     </div>
                 </div>
             </div>
