--- a/appMammaMia/templates/pizzas.html
+++ b/appMammaMia/templates/pizzas.html
@@ -23,15 +23,8 @@
 
                         <div class="pizza-info">
                             <h4>{{ pizza.nombre }}</h4>
-                            <p>{{ pizza.descripcion }}</p>
                             <p><strong>Precio:</strong> €{{ pizza.precio }}</p>
-                            <p><strong>Tiempo de preparación:</strong> {{ pizza.tiempo_preparacion }} min</p>
-                            <p><strong>Ingredientes:</strong></p>
-                            <ul>
-                                {% for ingrediente in pizza.ingredientes.all %}
-                                    <li><a href="{% url 'ingrediente_desc' ingrediente.nombre %}">{{ ingrediente.nombre }}</a></li>
-                                {% endfor %}
-                            </ul>
+                            <a href="{% url 'pizza_desc' pizza.nombre %}">Más información</a>
                         </div>
                     </div>
                 </div>
