--- a/appMammaMia/templates/reserva_success.html
+++ b/appMammaMia/templates/reserva_success.html
@@ -1,16 +1,12 @@
-<!-- reserva_success.html -->
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva Exitosa</title>
-</head>
-<body>
-    <div class="container text-center">
-        <h1>¡Reserva realizada con éxito!</h1>
-        <p>Gracias por hacer tu reserva. Te esperamos en el restaurante.</p>
-        <a href="{% url 'index' %}" class="btn btn-primary">Volver al inicio</a>
-    </div>
-</body>
-</html>
+{%extends 'base.html'%}
+{% load static %}
+{% block title %}
+    Reserva hecha en Mamma Mia!
+{% endblock %}
+
+{% block content %}
+<div style="text-align: center">
+<h2>Reserva confirmada!</h2>
+<p>Te esperamos el día {{ reserva.fecha }} a las {{ reserva.hora }} con {{ reserva.npersonas }} personas. </p>
+</div>
+{%endblock%}
