--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -142,7 +142,7 @@
             
     </div>
 
-    <!-- Reviews Section -->
+    <!-- Reviews Section FALTA LINKEARLO CON LA BD TAMBIEN -->
     <div id="testmonial" class="container-fluid wow fadeIn bg-dark text-light has-height-lg middle-items">
         <h2 class="section-title my-5 text-center">RESEÑAS</h2>
         <div class="row mt-3 mb-5">
