--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -25,7 +25,7 @@
         {% endblock %}
     </head>
 
-    <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+    <body data-spy="scroll" data-target=".navbar" data-offset="40">
 
         <!-- Navbar -->
         <nav class="custom-navbar navbar navbar-expand-lg navbar-dark fixed-top" data-spy="affix" data-offset-top="10">
