--- a/appMammaMia/templates/descripcion_de_pizza.html
+++ b/appMammaMia/templates/descripcion_de_pizza.html
@@ -16,6 +16,7 @@
         <div class="pizza-info">
             <h4>{{ pizza.nombre }}</h4>
             <p>{{ pizza.descripcion }}</p>
+            <p><strong>Tipo de masa:</strong> {{ pizza.masa }}</p>
             <p><strong>Precio:</strong> €{{ pizza.precio }}</p>
             <p><strong>Tiempo de preparación:</strong> {{ pizza.tiempo_preparacion }} min</p>
             <p><strong>Ingredientes:</strong></p>
