--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -120,6 +120,7 @@
     <!-- Book a Table Section -->
     <div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
+            <br><br><br><br><br><br><br>
             <h2 class="section-title mb-5">RESERVA MESA</h2>
             <form method="post" action="{% url 'reservar_mesa' %}">
                 {% csrf_token %}
@@ -138,7 +139,10 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-lg btn-primary" id="rounded-btn">BUSCAR MESA</button>
+                <br><br><br><br><br><br><br>
+
             </form>
+        </div>
             
     </div>
 
