--- a/appMammaMia/templates/ingrediente.html
+++ b/appMammaMia/templates/ingrediente.html
@@ -6,7 +6,10 @@
 {%endblock%}
 
 {% block content %}
-<h2 style="text-align: center">Descripción de Ingrediente: {{ingrediente.nombre}}</h2><br>
+<br><br><br><br><br><br>
+<br><br><br><br><br><br>
+
+<h2 style="text-align: center">Descripción de Ingrediente: {{ingrediente.nombre}}</h2>
 <div class="fondo-carta" style="background-color: #1f252bb9; padding: 30px; margin:auto; width: 80%; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); ">
 <td>
     <dl class="row">      
@@ -32,8 +35,9 @@
     </dl>
  </td></div><br>
 
-<br><br>
- <h4 style="margin-left:120px">Pizzas que lo contienen</h4><br>
+<br><br><br><br>
+ <h2 style="text-align: center">Pizzas que lo contienen</h2>
+<br>
  <div class="container">
     <div class="row">
         {%for pizza in pizzas%}
