--- a/appMammaMia/templates/reservar_mesa.html
+++ b/appMammaMia/templates/reservar_mesa.html
@@ -1,3 +1,1 @@
-<!-- no se para que se necesita esta pagina exactamente pero sin ella da error
- supongo que se podria poner el proceso que se hace aqui en la pagina de exito pero si da error saldria error en la pagina de exito y queda un poco contradictorio
- si eso pa la entrega final cambio esto-->
+<!-- Comportamiento alternativo para proceso de reserva no exitoso (sin definir)-->
