--- a/appMammaMia/templates/pizzas.html
+++ b/appMammaMia/templates/pizzas.html
@@ -16,24 +16,25 @@
     <br><br><br>
     <h2 style="text-align: center">Acerca de nuestra masa {{masa.nombre}}</h2><br>
     <div class="fondo-carta" style="background-color: #1f252bb9; padding: 30px; margin:auto; width: 80%; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); ">
-    <td>
-        <dl class="row">      
-        <dt class="col-sm-3">Nombre</dt>
-        <dd class="col-sm-9">
-            <p>Masa {{masa.nombre}}</p>
-        </dd>
+        <td>
+                <dl class="row">      
+                <dt class="col-sm-3">Nombre</dt>
+                <dd class="col-sm-9">
+                    <p>Masa {{masa.nombre}}</p>
+                </dd>
 
-        <dt class="col-sm-3">Descripción</dt>
-        <dd class="col-sm-9">
-            <p>{{masa.descripcion}}</p>
-        </dd>
+                <dt class="col-sm-3">Descripción</dt>
+                <dd class="col-sm-9">
+                    <p>{{masa.descripcion}}</p>
+                </dd>
 
-        <dt class="col-sm-3">Precio extra</dt>
-        <dd class="col-sm-9">
-            <p>{{masa.precio_extra}}€</p>
-        </dd>
-        </dl>
-    </td></div><br>
+                <dt class="col-sm-3">Precio extra</dt>
+                <dd class="col-sm-9">
+                    <p>{{masa.precio_extra}}€</p>
+                </dd>
+                </dl>
+        </td>
+    </div><br>
 </div>
 <br><br><br><br>
 <h1 class="titulo-de-masa">Pizzas con masa {{ masa.nombre }}</h1><br>
