--- a/appMammaMia/templates/ingrediente.html
+++ b/appMammaMia/templates/ingrediente.html
@@ -11,7 +11,7 @@
 
 <h2 style="text-align: center">Descripción de Ingrediente: {{ingrediente.nombre}}</h2>
 <div class="fondo-carta" style="background-color: #1f252bb9; padding: 30px; margin:auto; width: 80%; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); ">
-<td>
+
     <dl class="row">      
        <dt class="col-sm-3">Nombre</dt>
        <dd class="col-sm-9">
@@ -33,7 +33,7 @@
           <p>{{ingrediente.precio_extra}}€</p>
        </dd>
     </dl>
- </td></div><br>
+</div><br>
 
 <br><br><br><br>
  <h2 style="text-align: center">Pizzas que lo contienen</h2>
