--- a/appMammaMia/templates/ingrediente.html
+++ b/appMammaMia/templates/ingrediente.html
@@ -7,9 +7,9 @@
 
 {% block content %}
 <br><br><br><br><br><br>
-<br><br><br><br><br><br>
+<br><br><br><br>
 
-<h2 style="text-align: center">Descripción de Ingrediente: {{ingrediente.nombre}}</h2>
+<h2 style="text-align: center">Descripción de Ingrediente: {{ingrediente.nombre}}</h2><br><br>
 <div class="fondo-carta" style="background-color: #1f252bb9; padding: 30px; margin:auto; width: 80%; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); ">
 
     <dl class="row">      
@@ -35,7 +35,7 @@
     </dl>
 </div><br>
 
-<br><br><br><br>
+<br><br>
  <h2 style="text-align: center">Pizzas que lo contienen</h2>
 <br>
  <div class="container">
