--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -46,11 +46,14 @@
                         <a class="navbar-link" href="/#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-link" href="/index.html#gallary">Nuestra selección</a>
+                        <a class="navbar-link" href="/index.html#nuestraseleccion">Pizzas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-link" href="/index.html#book-table">Reservar mesa</a>
+                        <a class="navbar-link" href="/index.html#masas">Masas</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="navbar-link" href="/index.html#ingredientes">Ingredientes</a>
+                    </li>                    
                 </ul>
                 <a class="navbar-brand m-auto" href="/index.html">
                     <img src="{% static 'assets/imgs/logo.png' %}" class="brand-img" alt="Logo de Mamma Mia">
@@ -58,6 +61,9 @@
                 </a>
                 <ul class="navbar-nav">
                    <!-- nav vacio para centrar el logo -->
+                   <li class="nav-item">
+                        <a class="navbar-link" href="/index.html#book-table">Reservar mesa</a>
+                    </li>
                 </ul>
             </div>
         </nav>
