--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -7,14 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Web de pizzeria MammaMia!">
         <meta name="author" content="Aitor Ubieta, Eneko Alvarez, Oihane Carrillo y Maialen Blanco">
-        <style>
-            .navbar-link {
-                color: white;
-                font-weight: bold;
-                font-size: 16px;
-                padding-left: 20px;
-            }
-        </style>
+        <link rel="stylesheet" href="{% static 'assets/css/base.css' %}">
 
         <title>
             {% block title %}Mamma mia! | Pizzas auténticas{% endblock %}
