--- a/appMammaMia/templates/ingrediente.html
+++ b/appMammaMia/templates/ingrediente.html
@@ -9,8 +9,8 @@
 <br><br><br><br><br><br>
 <br><br><br><br>
 
-<h2 style="text-align: center">Descripción de Ingrediente: {{ingrediente.nombre}}</h2><br><br>
-<div class="fondo-carta" style="background-color: #1f252bb9; padding: 30px; margin:auto; width: 80%; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); ">
+<h2 class="h2-center">Descripción de Ingrediente: {{ingrediente.nombre}}</h2><br><br>
+<div class="fondo-carta" >
 
     <dl class="row">      
        <dt class="col-sm-3">Nombre</dt>
