--- a/appMammaMia/templates/pizzas.html
+++ b/appMammaMia/templates/pizzas.html
@@ -14,8 +14,8 @@
 <br><br><br><br><br><br>
 
     <br><br><br>
-    <h1 style="text-align: center">Acerca de nuestra masa {{masa.nombre}}</h1><br>
-    <div class="fondo-carta" style="background-color: #1f252bb9; padding: 30px; margin:auto; width: 80%; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); ">
+    <h1 class="h1-center">Acerca de nuestra masa {{masa.nombre}}</h1><br>
+    <div class="fondo-carta">
         <dl class="row">      
             <dt class="col-sm-3">Nombre</dt>
             <dd class="col-sm-9">
