--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -17,8 +17,8 @@
             <form method="post" action="{% url 'set_language' %}">
                 {% csrf_token %}
                 <select name="language" onchange="this.form.submit()">
-                    <option value="es" {% if LANGUAGE_CODE == 'es' %}selected{% endif %}>Español</option>
-                    <option value="en" {% if LANGUAGE_CODE == 'en' %}selected{% endif %}>English</option>
+                    <option value="es" {% if LANGUAGE_CODE = 'es' %}selected{% endif %}>Español</option>
+                    <option value="en" {% if LANGUAGE_CODE = 'en' %}selected{% endif %}>English</option>
                 </select>
             </form>
         </div>
