--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -58,6 +58,17 @@
                         <a class="navbar-link" href="/index.html#book-table">Reservar mesa</a>
                     </li>
                 </ul>
+                
+                <!-- Selector de idioma -->
+                <div class="language-selector ml-auto">
+                    <form method="post" action="{% url 'set_language' %}">
+                        {% csrf_token %}
+                        <select name="language" onchange="this.form.submit()" class="navbar-link">
+                            <option value="es" {% if LANGUAGE_CODE == 'es' %}selected{% endif %}>Español</option>
+                            <option value="en" {% if LANGUAGE_CODE == 'en' %}selected{% endif %}>English</option>
+                        </select>
+                    </form>
+                </div>
             </div>
         </nav>
 
@@ -107,3 +118,4 @@
 
     </body>
 </html>
+
