--- a/static/assets/css/base.css
+++ b/static/assets/css/base.css
@@ -21,3 +21,22 @@
 .h2-center{
     text-align: center;
 }
+
+.language-selector {
+    margin-left: auto;
+    padding: 10px;
+}
+
+.language-selector select {
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    padding-left: 20px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.language-selector select:focus {
+    outline: none;
+}
