--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -11,7 +11,7 @@
     <div class="overlay text-white text-center">
         <h1 class="display-2 font-weight-bold my-3">Mamma mia!</h1>
         <h2 class="display-4 mb-5">{% trans "Pizzas auténticas" %}</h2>
-        <a class="btn btn-lg btn-primary" href="#gallary">{% "trans Nuestro menú" %}</a>
+        <a class="btn btn-lg btn-primary" href="#gallary">{% trans "Nuestro menú" %}</a>
     </div>
 </header>
 
